fix card size on small screens

--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -5,11 +5,17 @@ body {
     &>section {
         background-color: #fff;
         position: relative;
-        margin:10% auto;
+        margin: 100px auto;
         padding: 20px;
-        width: 50%;
+        width: 90%;
         -webkit-box-shadow: 4px 6px 16px -2px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 4px 6px 16px -2px rgba(0, 0, 0, 0.75);
         box-shadow: 4px 6px 16px -2px rgba(0, 0, 0, 0.75);
+        @media screen and (min-width: $large_tablet_min_width) {
+            max-width: 70%;
+        }
+        @media screen and (min-width: $large_min_width) {
+            max-width: 50%;
+        }
     }
 }
